--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     font-family: "Oswald", sans-serif;
 }
 
-h1 {
+#pokedex-title {
     text-align: center;
     font-weight: 700;
     font-size: 60px;
